fixed min_z and max_z handler

--- a/config/debug_verbosity.yaml
+++ b/config/debug_verbosity.yaml
@@ -1,3 +1,4 @@
 log4j.logger.ros.mrs_uav_managers=DEBUG
 log4j.logger.ros.mrs_uav_trackers=DEBUG
 log4j.logger.ros.mrs_uav_controllers=DEBUG
+log4j.logger.ros.mrs_uav_state_estimators=DEBUG
