--- a/config/public/constraint_manager/constraints.yaml
+++ b/config/public/constraint_manager/constraints.yaml
@@ -35,7 +35,7 @@ mrs_uav_managers:
         pitch: 60.0
         yaw: 10.0
 
-      tilt: deg(60)
+      tilt: 60.0 # [deg]
 
     medium:
 
@@ -70,7 +70,7 @@ mrs_uav_managers:
         pitch: 60.0
         yaw: 10.0
 
-      tilt: deg(60)
+      tilt: 60.0 # [deg]
 
     fast:
 
@@ -105,4 +105,4 @@ mrs_uav_managers:
         pitch: 60.0
         yaw: 10.0
 
-      tilt: deg(60)
+      tilt: 60.0 # [deg]
