--- a/config/public/gain_manager/gain_manager.yaml
+++ b/config/public/gain_manager/gain_manager.yaml
@@ -6,6 +6,7 @@ mrs_uav_managers:
       "gps_garmin",
       "gps_baro",
       "rtk",
+      "rtk_garmin",
       "aloam",
       "hector_garmin",
       "vio",
@@ -25,6 +26,7 @@ mrs_uav_managers:
       gps_garmin: ["supersoft", "soft"]
       gps_baro: ["supersoft", "soft"]
       rtk: ["supersoft", "soft"]
+      rtk_garmin: ["supersoft", "soft"]
       aloam: ["supersoft", "soft"]
       hector_garmin: ["supersoft", "soft"]
       vio: ["supersoft", "soft"]
@@ -39,6 +41,7 @@ mrs_uav_managers:
       gps_garmin: "soft"
       gps_baro: "soft"
       rtk: "soft"
+      rtk_garmin: "soft"
       aloam: "supersoft"
       hector_garmin: "supersoft"
       vio: "supersoft"
