--- a/config/public/active_estimators.yaml
+++ b/config/public/active_estimators.yaml
@@ -3,12 +3,11 @@ mrs_uav_managers:
   estimation_manager:
 
     # loaded state estimator plugins
-    # available in mrs_uav_state_estimators: gps_garmin, gps_baro, rtk, aloam, ground_truth, dummy
+    # available in mrs_uav_state_estimators: gps_garmin, gps_baro, rtk, ground_truth, dummy
     state_estimators: [
     "gps_garmin",
     "gps_baro",
     # "rtk",
-    # "aloam",
     # "ground_truth",
     # "dummy"
     ]
