adding unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,16 @@ target_link_libraries(MrsUavManagers_TransformManager
   )
 
 ## --------------------------------------------------------------
+## |                           Testing                          |
+## --------------------------------------------------------------
+
+if(CATKIN_ENABLE_TESTING)
+
+  add_subdirectory(test)
+
+endif()
+
+## --------------------------------------------------------------
 ## |                           Install                          |
 ## --------------------------------------------------------------
 
