--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(rostest REQUIRED)
 
 add_rostest_gtest(MrsUavManagers_UavManagerTakeoffTest
   uav_manager/takeoff/uav_manager_takeoff.test
-  uav_manager/takeoff/test.cpp
+  uav_manager/takeoff/takeoff_test.cpp
   )
 
 target_link_libraries(
@@ -22,7 +22,7 @@ add_dependencies(
 
 add_rostest_gtest(MrsUavManagers_UavManagerLandingTest
   uav_manager/landing/uav_manager_landing.test
-  uav_manager/landing/test.cpp
+  uav_manager/landing/landing_test.cpp
   )
 
 target_link_libraries(
@@ -36,20 +36,20 @@ add_dependencies(
   ${catkin_EXPORTED_TARGETS}
   )
 
-# goto test
+# goto service test
 
-add_rostest_gtest(MrsUavManagers_ControlManagerGotoTest
-  control_manager/goto/control_manager_goto.test
-  control_manager/goto/test.cpp
+add_rostest_gtest(MrsUavManagers_ControlManagerGotoServiceTest
+  control_manager/goto_service/control_manager_goto_service.test
+  control_manager/goto_service/goto_service_test.cpp
   )
 
 target_link_libraries(
-  MrsUavManagers_ControlManagerGotoTest
+  MrsUavManagers_ControlManagerGotoServiceTest
   ${catkin_LIBRARIES}
   )
 
 add_dependencies(
-  MrsUavManagers_ControlManagerGotoTest
+  MrsUavManagers_ControlManagerGotoServiceTest
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
@@ -58,7 +58,7 @@ add_dependencies(
 
 add_rostest_gtest(MrsUavManagers_ControlManagerElandInnovationTest
   control_manager/eland_innovation/control_manager_eland_innovation.test
-  control_manager/eland_innovation/test.cpp
+  control_manager/eland_innovation/eland_innovation_test.cpp
   )
 
 target_link_libraries(
@@ -72,11 +72,47 @@ add_dependencies(
   ${catkin_EXPORTED_TARGETS}
   )
 
+# eland controlerror test
+
+add_rostest_gtest(MrsUavManagers_ControlManagerElandControlErrorTest
+  control_manager/eland_control_error/control_manager_eland_control_error.test
+  control_manager/eland_control_error/eland_control_error_test.cpp
+  )
+
+target_link_libraries(
+  MrsUavManagers_ControlManagerElandControlErrorTest
+  ${catkin_LIBRARIES}
+  )
+
+add_dependencies(
+  MrsUavManagers_ControlManagerElandControlErrorTest
+  ${${PROJECT_NAME}_EXPORTED_TARGETS}
+  ${catkin_EXPORTED_TARGETS}
+  )
+
+# failsafe controlerror test
+
+add_rostest_gtest(MrsUavManagers_ControlManagerFailsafeControlErrorTest
+  control_manager/failsafe_control_error/control_manager_failsafe_control_error.test
+  control_manager/failsafe_control_error/failsafe_control_error_test.cpp
+  )
+
+target_link_libraries(
+  MrsUavManagers_ControlManagerFailsafeControlErrorTest
+  ${catkin_LIBRARIES}
+  )
+
+add_dependencies(
+  MrsUavManagers_ControlManagerFailsafeControlErrorTest
+  ${${PROJECT_NAME}_EXPORTED_TARGETS}
+  ${catkin_EXPORTED_TARGETS}
+  )
+
 # eland service test
 
 add_rostest_gtest(MrsUavManagers_ControlManagerElandServiceTest
   control_manager/eland_service/control_manager_eland_service.test
-  control_manager/eland_service/test.cpp
+  control_manager/eland_service/eland_service_test.cpp
   )
 
 target_link_libraries(
