adding coverage to tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,9 @@ target_link_libraries(MrsUavManagers_TransformManager
 
 if(CATKIN_ENABLE_TESTING)
 
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
+
   add_subdirectory(test)
 
 endif()
