--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(rostest REQUIRED)
 # takeoff test
 
 add_rostest_gtest(MrsUavManagers_UavManagerTakeoffTest
+  uav_manager/takeoff/uav_manager_takeoff.test
   uav_manager/takeoff/takeoff_test.cpp
   )
 
@@ -20,6 +21,7 @@ add_dependencies(
 # landing test
 
 add_rostest_gtest(MrsUavManagers_UavManagerLandingTest
+  uav_manager/landing/uav_manager_landing.test
   uav_manager/landing/landing_test.cpp
   )
 
@@ -37,6 +39,7 @@ add_dependencies(
 # goto service test
 
 add_rostest_gtest(MrsUavManagers_ControlManagerGotoServiceTest
+  control_manager/goto_service/control_manager_goto_service.test
   control_manager/goto_service/goto_service_test.cpp
   )
 
@@ -54,6 +57,7 @@ add_dependencies(
 # eland innovation test
 
 add_rostest_gtest(MrsUavManagers_ControlManagerElandInnovationTest
+  control_manager/eland_innovation/control_manager_eland_innovation.test
   control_manager/eland_innovation/eland_innovation_test.cpp
   )
 
@@ -71,6 +75,7 @@ add_dependencies(
 # eland controlerror test
 
 add_rostest_gtest(MrsUavManagers_ControlManagerElandControlErrorTest
+  control_manager/eland_control_error/control_manager_eland_control_error.test
   control_manager/eland_control_error/eland_control_error_test.cpp
   )
 
@@ -88,6 +93,7 @@ add_dependencies(
 # failsafe controlerror test
 
 add_rostest_gtest(MrsUavManagers_ControlManagerFailsafeControlErrorTest
+  control_manager/failsafe_control_error/control_manager_failsafe_control_error.test
   control_manager/failsafe_control_error/failsafe_control_error_test.cpp
   )
 
@@ -105,6 +111,7 @@ add_dependencies(
 # eland service test
 
 add_rostest_gtest(MrsUavManagers_ControlManagerElandServiceTest
+  control_manager/eland_service/control_manager_eland_service.test
   control_manager/eland_service/eland_service_test.cpp
   )
 
