--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,9 @@
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>rostest</depend>
+  <depend>mrs_uav_testing</depend>
+
+  <test_depend>mrs_uav_gazebo_simulation</test_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelets.xml" />
