--- a/test/control_manager/eland_control_error/config/custom_config.yaml
+++ b/test/control_manager/eland_control_error/config/custom_config.yaml
@@ -9,10 +9,10 @@ mrs_uav_managers:
 
     # loaded state estimator plugins
     state_estimators: [
-      "passthrough",
+      "gps_baro",
     ]
 
-    initial_state_estimator: "passthrough" # will be used as the first state estimator
+    initial_state_estimator: "gps_baro" # will be used as the first state estimator
     agl_height_estimator: "" # only slightly filtered height for checking min height (not used in control feedback)
 
   control_manager:
