--- a/test/control_manager/failsafe_control_error/config/custom_config.yaml
+++ b/test/control_manager/failsafe_control_error/config/custom_config.yaml
@@ -9,15 +9,15 @@ mrs_uav_managers:
 
     # loaded state estimator plugins
     state_estimators: [
-      "passthrough",
+      "gps_baro",
     ]
 
-    initial_state_estimator: "passthrough" # will be used as the first state estimator
+    initial_state_estimator: "gps_baro" # will be used as the first state estimator
     agl_height_estimator: "" # only slightly filtered height for checking min height (not used in control feedback)
 
   control_manager:
 
     MpcController:
       eland_threshold: 0.0 # [m], position error triggering eland
-      failsafe_threshold: 0.1 # [m], position error triggering failsafe land
+      failsafe_threshold: 0.2 # [m], position error triggering failsafe land
       odometry_innovation_threshold: 0.0 # [m], position odometry innovation threshold
