--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(eland_control_error)
 add_subdirectory(eland_innovation)
 
 add_subdirectory(failsafe_control_error)
+
+add_subdirectory(eland_service)
