added escalating failsafe service test

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(eland_innovation)
 add_subdirectory(failsafe_control_error)
 
 add_subdirectory(eland_service)
+
+add_subdirectory(escalating_failsafe_service)
