--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -9,3 +9,5 @@ add_subdirectory(failsafe_control_error)
 add_subdirectory(eland_service)
 
 add_subdirectory(escalating_failsafe_service)
+
+add_subdirectory(escalating_failsafe_rc)
