added rc remote test

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -11,3 +11,5 @@ add_subdirectory(eland_service)
 add_subdirectory(escalating_failsafe_service)
 
 add_subdirectory(escalating_failsafe_rc)
+
+add_subdirectory(rc_remote_control)
