added estimator switching test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,5 @@ find_package(rostest REQUIRED)
 add_subdirectory(control_manager)
 
 add_subdirectory(uav_manager)
+
+add_subdirectory(estimation_manager)
