added land_there test

--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -4,6 +4,8 @@ add_subdirectory(landing)
 
 add_subdirectory(land_home)
 
+add_subdirectory(land_there)
+
 add_subdirectory(min_height_check)
 
 add_subdirectory(max_height_check)
