--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -6,6 +6,8 @@ add_subdirectory(takeoff_fail_cause_tracker)
 
 add_subdirectory(midair_fail_cause_enabling_output)
 
+add_subdirectory(midair_fail_cause_enabling_offboard)
+
 add_subdirectory(landing)
 
 add_subdirectory(land_home)
