--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -13,3 +13,5 @@ add_subdirectory(escalating_failsafe_service)
 add_subdirectory(escalating_failsafe_rc)
 
 add_subdirectory(rc_remote_control)
+
+add_subdirectory(bumper)
