updated the test format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,9 @@ target_link_libraries(MrsUavManagers_TransformManager
 ## |                           Testing                          |
 ## --------------------------------------------------------------
 
-if(CATKIN_ENABLE_TESTING)
+if(CATKIN_ENABLE_TESTING AND MRS_ENABLE_TESTING)
+
+  message(WARNING "Testing enabled.")
 
   add_subdirectory(test)
 
