fxd land_home bug with moving takeoff reference frame

--- a/test/uav_manager/CMakeLists.txt
+++ b/test/uav_manager/CMakeLists.txt
@@ -12,6 +12,8 @@ add_subdirectory(landing)
 
 add_subdirectory(land_home)
 
+add_subdirectory(land_home_moving_takeoff_frame)
+
 add_subdirectory(land_there)
 
 add_subdirectory(min_height_check)
