Tests: added gains and constraints tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,3 +6,7 @@ add_subdirectory(control_manager)
 add_subdirectory(uav_manager)
 
 add_subdirectory(estimation_manager)
+
+add_subdirectory(gain_manager)
+
+add_subdirectory(constraint_manager)
