Tests: added constraints override test

--- a/test/constraint_manager/CMakeLists.txt
+++ b/test/constraint_manager/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(set_constraints_should_succeed)
 
 add_subdirectory(set_constraints_should_fail)
+
+add_subdirectory(constraints_override)
