--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory(rc_remote_control)
 
 add_subdirectory(bumper)
 
-add_subdirectory(trajectory_topic)
+# flaky
+# add_subdirectory(trajectory_topic)
