--- a/test/control_manager/rc_remote_control/config/custom_config.yaml
+++ b/test/control_manager/rc_remote_control/config/custom_config.yaml
@@ -1,5 +1,13 @@
 mrs_uav_managers:
 
+  estimation_manager:
+
+    state_estimators: [
+    "gps_baro",
+    ]
+
+    initial_state_estimator: "gps_baro"
+
   constraint_manager:
 
     default_constraints:
