--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -17,3 +17,5 @@ add_subdirectory(rc_remote_control)
 add_subdirectory(bumper)
 
 add_subdirectory(trajectory_topic)
+
+add_subdirectory(trajectory_start_stop_resume)
