updated tests, added print for setting the reference

--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -21,3 +21,7 @@ add_subdirectory(trajectory_topic)
 add_subdirectory(trajectory_start_stop_resume)
 
 add_subdirectory(velocity_reference_topic)
+
+add_subdirectory(set_heading_service)
+
+add_subdirectory(set_heading_relative_service)
