--- a/test/control_manager/CMakeLists.txt
+++ b/test/control_manager/CMakeLists.txt
@@ -41,3 +41,9 @@ add_subdirectory(reference_topic)
 add_subdirectory(validate_reference_service)
 
 add_subdirectory(validate_reference_list_service)
+
+add_subdirectory(transform_reference_service)
+
+add_subdirectory(transform_pose_service)
+
+add_subdirectory(transform_vector3_service)
