integrating ErrorPublisher into the managers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CATKIN_DEPENDENCIES
   tf2_ros
   tf2_geometry_msgs
   mrs_uav_testing
+  mrs_errorgraph
   )
 
 find_package(catkin REQUIRED COMPONENTS
