--- a/test/uav_manager/takeoff_fail_cause_tracker/config/custom_config.yaml
+++ b/test/uav_manager/takeoff_fail_cause_tracker/config/custom_config.yaml
@@ -21,4 +21,4 @@ mrs_uav_managers:
 
       during_takeoff:
         # some nonexisting tracker
-        tracker: "WrongTracker
+        tracker: "WrongTracker"
