--- a/package.xml
+++ b/package.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
 
   <name>mrs_uav_managers</name>
-  <version>1.0.4</version>
+
+  <version>2.0.0</version>
   <description>The mrs_uav_managers package</description>
 
-  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
-  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
+  <author email="tomas.baca@fel.cvut.cz">klaxalk</author>
+  <maintainer email="tomas.baca@fel.cvut.cz">klaxalk</maintainer>
 
   <license>BSD 3-Clause</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <depend>cmake_modules</depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <depend>nodelet</depend>
-  <depend>geometry_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
+  <depend>pluginlib</depend>
+  <depend>builtin_interfaces</depend>
+
   <depend>std_msgs</depend>
-  <depend>nav_msgs</depend>
-  <depend>mrs_msgs</depend>
-  <depend>visualization_msgs</depend>
-  <depend>mrs_lib</depend>
-  <depend>tf2</depend>
+  <depend>std_srvs</depend>
+  <depend>geometry_msgs</depend>
   <depend>tf2_ros</depend>
+  <depend>nav_msgs</depend>
+  <depend>eigen</depend>
+  <depend>visualization_msgs</depend>
   <depend>tf2_geometry_msgs</depend>
-  <depend>rostest</depend>
-  <depend>mrs_uav_testing</depend>
+
+  <depend>mrs_lib</depend>
+  <depend>mrs_msgs</depend>
+  <depend>mrs_uav_hw_api</depend>
 
   <export>
-    <nodelet plugin="${prefix}/nodelets.xml" />
-    <mrs_uav_managers plugin="${prefix}/plugins.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 
 </package>
